fix focus state in modal and remove border on mobile

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -829,6 +829,10 @@ a.product__text {
     width: 70%;
     padding: 0 3rem;
   }
+
+  .product-media-modal__dialog .global-media-settings--no-shadow {
+    overflow: visible !important;
+  }
 }
 
 .product-popup-modal__content img {
@@ -842,6 +846,11 @@ a.product__text {
     overflow-x: auto;
     white-space: nowrap;
     margin: 0;
+  }
+
+  .product-media-modal__dialog .global-media-settings {
+    border: none;
+    border-radius: 0;
   }
 }
 
